PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/CATS_TMP_APPROVAL__c.object-meta.xml
<CustomObject>
    <label>승인내역</label>
    <nameField>
        <displayFormat>APPROVAL-{YY}{MM}{DD}-{00000}</displayFormat>
        <label>CATS_TMP_APPROVAL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>