PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/Abroad__c.field-meta.xml
<CustomField>
    <fullName>Abroad__c</fullName>
    <label>해외사용여부</label>
    <length>255</length>
    <type>Text</type>
</CustomField>