PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/AcquIssuer__c.field-meta.xml
<CustomField>
    <fullName>AcquIssuer__c</fullName>
    <label>전표매입사</label>
    <length>255</length>
    <type>Text</type>
</CustomField>