PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/ApprAmt__c.field-meta.xml
<CustomField>
    <fullName>ApprAmt__c</fullName>
    <label>공급가액[승인금액,현지금액]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>