PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/ApprExch__c.field-meta.xml
<CustomField>
    <fullName>ApprExch__c</fullName>
    <label>승인시 적용환율</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>