PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/ApprTot__c.field-meta.xml
<CustomField>
    <fullName>ApprTot__c</fullName>
    <label>승인합계[현지금액]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>