PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/BCMccCode__c.field-meta.xml
<CustomField>
    <fullName>BCMccCode__c</fullName>
    <label>BC 업종코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>