PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/CardLimitAppr__c.field-meta.xml
<CustomField>
    <fullName>CardLimitAppr__c</fullName>
    <label>승인시점 잔여한도</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>