PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/CardNo__c.field-meta.xml
<CustomField>
    <fullName>CardNo__c</fullName>
    <label>카드번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>