PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/CardType1__c.field-meta.xml
<CustomField>
    <fullName>CardType1__c</fullName>
    <label>카드종류</label>
    <length>255</length>
    <type>Text</type>
</CustomField>