PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/CardType2__c.field-meta.xml
<CustomField>
    <fullName>CardType2__c</fullName>
    <label>카드유형</label>
    <length>255</length>
    <type>Text</type>
</CustomField>