PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/CompanyID__c.field-meta.xml
<CustomField>
    <fullName>CompanyID__c</fullName>
    <label>사업자번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>