PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/DataCode__c.field-meta.xml
<CustomField>
    <fullName>DataCode__c</fullName>
    <label>데이터</label>
    <length>255</length>
    <type>Text</type>
</CustomField>