PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/ERP_YN__c.field-meta.xml
<CustomField>
    <fullName>ERP_YN__c</fullName>
    <label>ERP 처리여부</label>
    <length>255</length>
    <type>Text</type>
</CustomField>