PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/Master__c.field-meta.xml
<CustomField>
    <fullName>Master__c</fullName>
    <label>가맹점 대표자명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>