PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/MCCCode__c.field-meta.xml
<CustomField>
    <fullName>MCCCode__c</fullName>
    <label>VISA 업종코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>