PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/MCCName__c.field-meta.xml
<CustomField>
    <fullName>MCCName__c</fullName>
    <label>VISA 업종명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>