PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/MerchAddr2__c.field-meta.xml
<CustomField>
    <fullName>MerchAddr2__c</fullName>
    <label>가맹점 주소_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>