PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/MerchNo__c.field-meta.xml
<CustomField>
    <fullName>MerchNo__c</fullName>
    <label>가맹점 번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>