PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/MerchStatus__c.field-meta.xml
<CustomField>
    <fullName>MerchStatus__c</fullName>
    <label>가맹점 휴폐업 정보</label>
    <length>255</length>
    <type>Text</type>
</CustomField>