PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/MerchTel__c.field-meta.xml
<CustomField>
    <fullName>MerchTel__c</fullName>
    <label>가맹점 전화번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>