PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/OIL_QTY__c.field-meta.xml
<CustomField>
    <fullName>OIL_QTY__c</fullName>
    <label>주유결제유량</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>