PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/OIL_TYPE__c.field-meta.xml
<CustomField>
    <fullName>OIL_TYPE__c</fullName>
    <label>주유결제유종코드</label>
    <length>255</length>
    <type>Text</type>
</CustomField>