PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/OriginApprNo__c.field-meta.xml
<CustomField>
    <fullName>OriginApprNo__c</fullName>
    <label>(원)승인번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>