PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/OriginTransDate__c.field-meta.xml
<CustomField>
    <fullName>OriginTransDate__c</fullName>
    <label>(원)거래일자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>