PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/PartApprCancYN__c.field-meta.xml
<CustomField>
    <fullName>PartApprCancYN__c</fullName>
    <label>부분 승인 취소</label>
    <length>255</length>
    <type>Text</type>
</CustomField>