PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/Purch__c.field-meta.xml
<CustomField>
    <fullName>Purch__c</fullName>
    <label>전표제출</label>
    <length>255</length>
    <type>Text</type>
</CustomField>