PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/ReadFlag__c.field-meta.xml
<CustomField>
    <fullName>ReadFlag__c</fullName>
    <label>처리여부</label>
    <length>255</length>
    <type>Text</type>
</CustomField>