PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/SettDate__c.field-meta.xml
<CustomField>
    <fullName>SettDate__c</fullName>
    <label>결제(예정)일</label>
    <length>255</length>
    <type>Text</type>
</CustomField>