PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/TerminalNo__c.field-meta.xml
<CustomField>
    <fullName>TerminalNo__c</fullName>
    <label>단말기번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>