PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/TransDate__c.field-meta.xml
<CustomField>
    <fullName>TransDate__c</fullName>
    <label>승인일자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>