PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/TransTime__c.field-meta.xml
<CustomField>
    <fullName>TransTime__c</fullName>
    <label>승인시간</label>
    <length>255</length>
    <type>Text</type>
</CustomField>