PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/USDApprTot__c.field-meta.xml
<CustomField>
    <fullName>USDApprTot__c</fullName>
    <label>승인합계[달러환산]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>