PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/VAT1__c.field-meta.xml
<CustomField>
    <fullName>VAT1__c</fullName>
    <label>수정 부가세</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>