PA_Education/TestMenifest/force-app/main/default/objects/CATS_TMP_APPROVAL__c/fields/VATYN__c.field-meta.xml
<CustomField>
    <fullName>VATYN__c</fullName>
    <label>부가세환급여부</label>
    <length>255</length>
    <type>Text</type>
</CustomField>